    consider cut/paste problems of the past Tk interface obsolete.
    (closes: #305249)
  * Policy bumped to 3.9.1. No changes required.
  * Added libgdal1-dev dep to grass-dev list of dependencies.
    (closes: #598706)
  * Merged from 6.4.0~rc6+42329-3:
  * Now builds against Tcl/Tk >= 8.5.
    (closes: #582595)
  * Removed obsolete grass-doc conflicts/replaces.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sun, 13 Feb 2011 19:09:03 +0100

grass (6.4.0~rc6+42329-3) unstable; urgency=low

  * Merging main fixes taken from final 6.4.0 release. The big patch has been
    splitted in a few sub-patches for specific improvements.
        + localization.dpatch: updates to .po files.
        + doc.dpatch: various documentation fixes with update to main URL too. 
        + gcs.dpatch: Port GDAL's http://trac.osgeo.org/gdal/changeset/19810 
              to fix missing towsg84 for EPSG codes: 3120 2172 2173 2174 2175 
              3333 3334 3335 3329 3330 3331 3332 3328 4179. 
              It also forces ETRS89 datum to be
              interpreted as 0,0,0,0,0,0,0 instead of 0.000,0.000,0.000 (i.e.
              overrides the datum.table ETRS89 setting, too). More info:
              http://lists.osgeo.org/pipermail/grass-dev/2010-June/050918.html,
              http://trac.osgeo.org/gdal/ticket/3579.
        + g.extension.dpatch: added Markus g.extension script to download and
          eventually install extension from GRASS svn add-ons repo.
        + scripts.dpatch: some fixes to a blounce of scripts: 
                m.proj - added GUI section
                r.mask - allow r.mask to work in GISDBASE
                v.in.gpsbabel - fixed broken awk statement
                v.in.mapgen - better describe what v.in.mapgen will load
                r.regression.line -  rename variable from italian so it 
                     doesn't get confused with median, add F-test to key
        + g.proj: only split at space characters if there is a + character