@@ -15,8 +15,10 @@ grass (6.4.0-2) unstable; urgency=low
   * Now builds against Tcl/Tk >= 8.5.
     (closes: #582595)
   * Removed obsolete grass-doc conflicts/replaces.
+  * Moved to source format 3.0 and quilt patch support.
+  * Moved from svn to git and updated Vcs-* fields in debian/control* as due.
 
- -- Francesco Paolo Lovergine <frankie@debian.org>  Sun, 13 Feb 2011 19:09:03 +0100
+ -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 14 Feb 2011 17:35:56 +0100
 
 grass (6.4.0~rc6+42329-3) unstable; urgency=low
 
